--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "name": "anon-aadhaar-vite-setup",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -29,5 +27,6 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
-  }
+  },
+  "packageManager": "yarn@4.3.1"
 }
